<resources>
    <string name="app_name">Pongo el Hombro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="principal">Principal</string>
    <string name="mapa">Mapa</string>
    <string name="informate">Informate</string>
    <string name="calendario">Calendario</string>
    <string name="noticias">Noticias</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="login">Iniciar Sesión</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="remember">Recordar</string>
    <string name="go">Adelante</string>
    <string name="continuar">Continuar sin iniciar sesión</string>
    <string name="cerrarsesion">Cerrar Sesión</string>

    <string name="signin">Registrarse</string>
    <string name="signup">Registrarme</string>
    <string name="gotologin">Ir a inicio de Sesión</string>

    <string name="yourvaccines">Tus Vacunas</string>
    <string name="firstdosis">1RA Dosis</string>
    <string name="seconddosis">2DA Dosis</string>

    <string name="inform">Infórmate</string>
    <string name="informtext">Información sobre los distintos tipos de vacunas e información de vacunación.</string>
    <string name="inperu">En el Perú</string>
    <string name="applied">Dosis Aplicadas</string>
    <string name="mapminsa">Mapa segun MINSA</string>
    <string name="vaccines">Vacunas</string>

</resources>